# lispy

./: .gitignore  README.md  lispy.ipynb  pyproject.toml  requirements.txt
lispy/: __init__.py  __main__.py  grammar.lark  parser.py  runtime.py  symbol.py
tests/: conftest.py  test_advanced.py  test_extensions.py  test_simple.py
tests/examples/: collatz.lispy  fat.lispy  lisp-fat.lispy  lisp-fibo.lispy  lisp-hello.lispy
